--- a/server/views/layouts/blog.hbs
+++ b/server/views/layouts/blog.hbs
@@ -6,6 +6,22 @@
   <link href="stylesheets/blog.css" media="all" rel="stylesheet">
 </head>
 <body>
-  {{{body}}}
+  <header>
+    <div class="logo">Logo</div>
+  </header>
+  <main>
+    {{{body}}}
+  </main>
+  <footer>
+    <div class="site-meta">
+      &hearts; 2017 <strong>Rob McLarty</strong>.
+      Copying is an act of love. Please copy.
+    </div>
+    <ul>
+      <li><a href="/">Homepage</a></li>
+      <li><a href="https://twitter.com/robmclarty">Twitter</a></li>
+      <li><a href="https://github.com/robmclarty">Github</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
