--- a/server/views/blog/post.hbs
+++ b/server/views/blog/post.hbs
@@ -1,1 +1,10 @@
-blog post
+<article class="post" id="post-{{ blogPost.id }}">
+  <h1 id="post-title">{{ blogPost.title }}</h1>
+  <h2>{{ blogPost.description }}</h2>
+  <div class="post-meta">
+    <span class="post-date">{{ blogPost.createdAt }}</span>
+    &middot;
+    <span class="post-length">{{ blogPost.length }} min read</span>
+  </div>
+  <div class="post-body">{{ blogPost.body }}</div>
+</article>
